# rusty_javap

./: .gitignore  Cargo.toml
data/: Example.class.json  Example.java  compile.sh  decompile.sh  recompile.sh
examples/: class2json.rs  json2class.rs
src/: access.rs  attributes.rs  classfile.rs  constant_pool.rs  fields.rs  interfaces.rs  lib.rs  main.rs  methods.rs  model.rs  reader.rs  typedefs.rs  versions.rs
src/bytecode/: access.rs  attributes.rs  classfile.rs  constant_pool.rs  fields.rs  interfaces.rs  methods.rs  mod.rs  reader.rs  unresolved.rs  versions.rs  writer.rs
src/model/: attrs.rs  class.rs  field.rs  interface.rs  method.rs  mod.rs
src/model/attrs/: code.rs  constant_value.rs  line_number_table.rs  local_variable_table.rs  method_parameters.rs  mod.rs
tests/: Example.class.json  class2json.rs  hello_world.rs  json2class2json.rs
