[package]
name = "rusty_javap"
version = "0.1.0"
authors = ["Starlight220 <53231611+Starlight220@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"] }
